# Fang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_SIGNING.md  Fang.pro  FeedItem.cpp  FeedItem.h  Info.plist  LICENSE  ListModel.h  NewsItem.h  README.md  Resources.qrc  androidDeploy.sh  com.mrericsir.Fang.desktop  com.mrericsir.Fang.yml  coverage.sh  deployFile.sh  entitlements.plist  fang.wxs  macDeploy.sh  main.cpp  nixPrebuild.sh  win32.rc  winDeploy.bat  winPrebuild.bat
html/: fang.js  (+7 more)
lib/FangFeedDiscovery/: BatchFeedFetcher.cpp  BatchFeedFetcher.h  BrowserNetworkAccessManager.cpp  BrowserNetworkAccessManager.h  CMakeLists.txt  FangNetworkAccessManager.cpp  FangNetworkAccessManager.h  FeedDiscovery.cpp  FeedDiscovery.h  FeedDiscoveryLogging.cpp  FeedDiscoveryLogging.h  FeedFetchResult.h  FeedFetcher.cpp  FeedFetcher.h  FeedSource.cpp  FeedSource.h  NetworkDownloadCore.cpp  NetworkDownloadCore.h  NetworkRetryPolicy.cpp  NewsSitemapSynthesizer.cpp  NewsSitemapSynthesizer.h  PageMetadataExtractor.h  SitemapParser.cpp  WebPageGrabber.cpp  WebPageGrabber.h
lib/FangFeedParser/: CMakeLists.txt  FeedDateParser.cpp  FeedDateParser.h  FeedParseError.h  FeedParseResult.cpp  FeedParseResult.h  FeedParser.cpp  FeedParser.h  FeedParserLogging.cpp  JSONFeedParser.cpp  JSONFeedParser.h  OPMLExport.cpp  OPMLExport.h  OPMLParser.cpp  RSSAtomParser.cpp  RSSAtomParser.h  RawFeed.cpp  RawFeed.h  RawNews.cpp  RawNews.h
lib/QWebDownload/: CMakeLists.txt  QBatchWebDownload.cpp  QBatchWebDownload.h  QWebDownload.cpp  QWebDownload.h  WebDownloadLogging.cpp  WebDownloadLogging.h  WebRetryPolicy.cpp  WebRetryPolicy.h  WebUtilities.cpp  WebUtilities.h
src/parser/: BackgroundParser.cpp  BackgroundParser.h  BackgroundParserThread.cpp  BackgroundParserThread.h  BatchFeedFetcher.cpp  BatchFeedFetcher.h  BatchNewsParser.cpp  BatchNewsParser.h  CMakeLists.txt  FeedFetcher.cpp  FeedFetcher.h  FeedParser.cpp  FeedParser.h  FeedParserLogging.h  FeedParserRouter.cpp  FeedParserRouter.h  FeedSource.cpp  FeedSource.h  JSONFeedParser.cpp  JSONFeedParser.h  NewsParser.cpp  NewsParser.h  OPMLParser.cpp  OPMLParser.h  Parser.cpp  Parser.h  ParserInterface.cpp  ParserInterface.h  ParserXMLWorker.cpp  ParserXMLWorker.h  RSSAtomParser.cpp  RSSAtomParser.h  RawFeed.cpp  RawFeed.h  RawNews.cpp  RawNews.h  SitemapParser.cpp  SitemapParser.h
test/: AllUnitTests.pro  CMakeLists.txt  MockBatchFeedFetcher.h  MockBatchNewsParser.h  MockBatchWebPageGrabber.h  MockDBSettings.h  MockFangSettings.h  MockFeedSource.cpp  MockFeedSource.h  MockGoogleNewsSitemapSynthesizer.h  MockNetworkAccessManager.cpp  MockNetworkAccessManager.h  MockNewsParser.cpp  MockNewsParser.h  MockNewsSitemapSynthesizer.h  MockWebPageGrabber.h
test/FangTestLib/: CMakeLists.txt  README.md
test/TestBatchFeedDiscovery/: CMakeLists.txt  tst_testbatchfeeddiscovery.cpp
test/TestBatchFeedFetcher/: CMakeLists.txt  tst_batchfeedfetcher.cpp  tst_testbatchnewsparser.cpp
test/TestBatchNewsParser/: CMakeLists.txt  tst_testbatchnewsparser.cpp
test/TestBookmarkIntegration/: CMakeLists.txt  tst_bookmarkintegration.cpp
test/TestDB/: CMakeLists.txt  tst_db.cpp
test/TestDatabaseOperations/: CMakeLists.txt  tst_databaseoperations.cpp
test/TestFangFaviconGrabber/: CMakeLists.txt  TestFangFaviconGrabber.pro  tst_favicongrabber.cpp  tst_testfangfavicongrabbertest.cpp
test/TestFangFeedDiscovery/: CMakeLists.txt  TestFangFeedDiscovery.pro  tst_testfangfeeddiscovery.cpp
test/TestFangNetworkIntegration/: CMakeLists.txt  tst_fangnetworkintegration.cpp
test/TestFangOPMLParser/: CMakeLists.txt  TestFangOPMLParser.pro  tst_opmlparser.cpp  tst_testfangopmlparser.cpp
test/TestFangObject/: CMakeLists.txt  tst_fangobject.cpp
test/TestFangParser/: CMakeLists.txt  TestFangParser.pro  tst_fangparser.cpp  tst_feedparser.cpp
test/TestFangSettings/: CMakeLists.txt  tst_fangsettings.cpp
test/TestFangSimpleStateMachine/: CMakeLists.txt  TestFangSimpleStateMachine.pro  tst_testfangsimplestatemachine.cpp
test/TestFeedItem/: CMakeLists.txt  tst_feeditem.cpp
test/TestFeedOperations/: CMakeLists.txt  tst_feedoperations.cpp
test/TestFeedURLNormalization/: CMakeLists.txt  tst_feedurlnormalization.cpp
test/TestFeedValidator/: CMakeLists.txt  README.md  STATUS.md  SUMMARY.md  tst_feedvalidator_simple.cpp
test/TestFileLogging/: CMakeLists.txt  tst_filelogging.cpp
test/TestHTMLSanitizer/: CMakeLists.txt  tst_htmlsanitizer.cpp
test/TestImageCache/: CMakeLists.txt  tst_imagecache.cpp
test/TestImageGrabber/: CMakeLists.txt  tst_imagegrabber.cpp
test/TestLeakTracker/: CMakeLists.txt  tst_leaktracker.cpp
test/TestListModel/: CMakeLists.txt  tst_listmodel.cpp
test/TestLisvelFeedItem/: CMakeLists.txt  tst_lisvelfeeditem.cpp
test/TestLoadNewsOperation/: CMakeLists.txt  tst_loadnewsoperation.cpp
test/TestNetworkDownloadCore/: CMakeLists.txt  tst_networkdownloadcore.cpp
test/TestNetworkRetryPolicy/: CMakeLists.txt  tst_networkretrypolicy.cpp
test/TestNetworkStateMonitor/: CMakeLists.txt  tst_networkstatemonitor.cpp
test/TestNewsItem/: CMakeLists.txt  tst_newsitem.cpp
test/TestNewsList/: CMakeLists.txt  tst_newslist.cpp
test/TestOPMLExport/: CMakeLists.txt  tst_opmlexport.cpp
test/TestQWebDownload/: CMakeLists.txt  tst_qwebdownload.cpp
test/TestRawFeedRewriter/: CMakeLists.txt  TestRawFeedRewriter.pro  tst_rawfeedrewriter.cpp  tst_testrawfeedrewritertest.cpp
test/TestResilientNetworkReply/: CMakeLists.txt  tst_resilientnetworkreply.cpp
test/TestSearch/: CMakeLists.txt  tst_search.cpp
test/TestSearchOperation/: CMakeLists.txt  tst_searchoperation.cpp
test/TestSingleInstanceCheck/: CMakeLists.txt  tst_testqsingleinstancecheck.cpp  tst_testsingleinstancecheck.cpp
test/TestSpecialFeedItems/: CMakeLists.txt  tst_specialfeeditems.cpp
test/TestSync/: CMakeLists.txt  MockCloudStorageProvider.cpp  MockCloudStorageProvider.h  tst_sync.cpp
test/TestURLFixup/: CMakeLists.txt  TestURLFixup.pro  tst_urlfixup.cpp
test/TestUpdateChecker/: CMakeLists.txt  tst_updatechecker.cpp
test/TestUpdateOrdinalsOperation/: CMakeLists.txt  (+1 more)
(+918 files in other folders)
